--- a/TutorialOne/TutorialOne/TutorialOne.vcxproj
+++ b/TutorialOne/TutorialOne/TutorialOne.vcxproj
@@ -147,7 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="math.cpp" />
     <ClCompile Include="TutorialOne.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="math.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
