--- a/TutorialThree/Bank/Bank/Bank.vcxproj
+++ b/TutorialThree/Bank/Bank/Bank.vcxproj
@@ -148,12 +148,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
-    <ClCompile Include="Bank.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="CurrentAccount.cpp" />
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Person.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Account.h" />
+    <ClInclude Include="CurrentAccount.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="Person.h" />
   </ItemGroup>
